--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   <title>Pizzeria</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext"
     rel="stylesheet">
-  <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="vendor/flickity.css" media="screen">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,6 +23,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -63,6 +65,9 @@
   </header>
 
   <div id="pages">
+    <section id="home">
+      <div class="home-wrapper container"></div>
+    </section>
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -244,7 +249,72 @@
     </div>
   </script>
 
+  <script id="template-home" type="text/x-handlebars-template">
+    <div class="home-inner-container">
+      <section class="box-order">
+        <div class="row-order">
+          <div class="order-image-container">
+            <div class="order-image"><img src="images\home\pizza-1.jpg">
+                <a href="#order" class="link-order">
+                  <h2>ORDER ONLINE</h2>
+                  <p>Delicious food delivered to your door.</p>
+                </a>
+            </div>
+          </div>
+          <div class="order-image-container">
+            <div class="order-image"><img src="images\home\pizza-2.jpg">
+              <a href="#booking" class="link-order">
+                <h2>BOOK A TABLE</h2>
+                <p>Let's meet at our place.</p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row-order">
+          <div class="open-info">
+            <h2>OPENING HOURS:</h2>
+            <p>TUE-SUN, 12PM - 12 AM</p>
+          </div>
+        </div>
+      </section>
+      <section class="box-reviews">
+        <div class="main-carousel">
+        </div>
+      </section>
+      <section class="box-gallery">
+      </section>
+    </div>
+  </script>
+
+  <script id="template-homeGalleryImage" type="text/x-handlebars-template">
+    <div class="gallery-image-container">
+      <div class="gallery-image">
+        <img src={{{ this }}}>
+        <div class="overlay">
+          <a href="https://kodilla.com" class="like" target="_blank"><i class="fa-solid fa-heart"></i></a>
+          <a href="https://kodilla.com" class="share" target="_blank"><i class="fa-sharp fa-solid fa-share-nodes"></i></a>
+        </div>
+      </div>
+    </div>
+  </script>
+
+  <script id="template-carouselCell" type="text/x-handlebars-template">
+    <div class="carousel-cell">
+      <div class="carousel-inner-cell">
+        <div class="carousel-image">
+          <img src={{{ image }}}>
+        </div>
+        <div class="carousel-description">
+          <h3>{{{ name }}}</h3>
+          <p>{{{ text }}}</p>
+        </div>
+      </div>
+    </div>
+  </script>
+
+
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="vendor/flickity.pkgd.min.js" type="module"></script>
   <script src="vendor/range-slider.min.js" type="module"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="js/app.js" type="module"></script>
